--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Nav</string>
 
-    <string name="title_section1">Section 1</string>
+    <string name="title_section1">Intent</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
 
