--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,18 @@
 <resources>
     <string name="app_name">Nav</string>
 
-    <string name="title_section1">Recent Activity</string>
-    <string name="title_section2">File Sharing</string>
-    <string name="title_section3">Social</string>
-    <string name="title_section4">About Us</string>
+    <string name="title_section1">File Sharing</string>
+    <string name="title_section2">Social</string>
+    <string name="title_section3">About App</string>
+    <string name="title_section4">Settings</string>
 
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_example">Example action</string>
+    //string representing action left of 3 vertical dots
+    //Remove empty string to change this
+    <string name="action_example">""</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">More</string>
 </resources>
